--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -1,6 +1,7 @@
 %%
 %% Packaging
 %%
+{build_envs, "REBAR_PROFILE=package"}.
 {package_name, "oz-worker"}.
 {package_install_name, "oz_worker"}.
 {package_install_user, "oz_worker"}.
