--- a/rebar.config
+++ b/rebar.config
@@ -4,35 +4,40 @@
     "src/handlers/rest_module_behavior.erl"
 ]}.
 
-{sub_dirs, ["rel"]}.
-
 {clean_files, [
     "test/eunit_results",
     "test_distributed/*.beam",
     "test_distributed/logs/*"
 ]}.
 
-%% to include deps headers
-{lib_dirs, ["deps"]}.
-
 {cover_enabled, true}.
-{cover_export_enabled, true}.
+
+{dialyzer, [
+    {warnings, [error_handling, race_conditions]},
+    {plt_extra_apps, [ranch, ctool, cluster_worker]}
+]}.
 
 %% eunit opts - Maven-like output formatting
-{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "../test/eunit_results"}]}}]}.
+{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, "3.0.0-beta3", {git, "${ONEDATA_GIT_URL}/ctool.git", {tag, "2015f94dacc"}}},
-    {cluster_worker, "3.0.0-beta3", {git, "${ONEDATA_GIT_URL}/cluster-worker.git", {tag, "5b1de88b456"}}},
-    {gui, "3.0.0-beta3", {git, "${ONEDATA_GIT_URL}/gui.git", {tag, "191d837"}}},
-    {meck, "0.8.4", {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
-    {parse_trans, "2.9.2", {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
-    {annotations, ".*", {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
-    {node_package, ".*", {git, "git://github.com/onedata/node_package.git", {branch, "2.0.2"}}}
+    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "d498728ef38"}}},
+    {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "b83ecd1"}}},
+    {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "da71898"}}}},
+    {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "191d837"}}},
+    {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
+    {parse_trans, {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
+    {annotations, {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
+    {observer_cli, "1.0.7"}
 ]}.
 
 %% plugins
-{plugins, [rebar_git_plugin, rebar_annotations_plugin]}.
+{plugins, [rebar3_hex, rebar3_elixir,
+    {rebar_raw_resource,
+        {git, "git://github.com/tburghart/rebar_raw_resource.git",
+        {tag, "0.5.0"}}
+    }
+]}.
 
 {erl_opts, [
     fail_on_warning,
@@ -47,3 +52,105 @@
     %% start during eunit tests, so we need to force start it
     {eunit, "epmd -daemon"}
 ]}.
+
+%% relx configuration
+{relx, [
+    {release, {"oz_worker", "1.0.0"},
+        [
+            kernel,
+            stdlib,
+            xmerl,
+            sasl,
+            public_key,
+            crypto,
+            ssl,
+            gui,
+            % Meck is needed only for development purposes, should be removed before release.
+            meck,
+            % All ctool deps will be included in the release package,
+            % so there is no need to list them here.
+            ctool,
+            mnesia,
+            couchbeam,
+            {cluster_worker, load},
+            {observer_cli, load},
+            %% deps included by default by reltool but not included by relx
+            {base64url, load},
+            certifi,
+            {common_test, load},
+            {corman, load},
+            {debugger, load},
+            {dht_ring, load},
+            {edoc, load},
+            {enacl_p, load},
+            {erts, load},
+            {et, load},
+            {eunit, load},
+            gen_smtp,
+            hackney,
+            {inets, load},
+            {jiffy, load},
+            {jsx, load},
+            {macaroons, load},
+            {mcd, load},
+            {mochiweb, load},
+            {observer, load},
+            {otp_mibs, load},
+            {runtime_tools, load},
+            {snmp, load},
+            {ssh, load},
+            {wx, load},
+            oz_worker
+        ]},
+
+    {vm_args, "rel/files/vm.args"},
+    {sys_config, "rel/files/app.config"},
+    {target_dir, "oz_worker"},
+    {include_src, false},
+    {dev_mode, true},
+
+    {overlay, [
+        %% Copy base files for starting and interacting with node
+        {copy, "node_package/priv/base/erl", "erts-{{erts_vsn}}/bin/erl"},
+        {copy, "node_package/priv/base/nodetool", "erts-{{erts_vsn}}/bin/nodetool"},
+        {template, "node_package/priv/base/runner", "bin/oz_worker"},
+        {template, "node_package/priv/base/env.sh", "lib/env.sh"},
+
+        %% Copy config files
+        {mkdir, "etc"},
+        {template, "rel/files/app.config", "etc/app.config"},
+        {template, "rel/files/vm.args", "etc/vm.args"},
+        {copy, "cacerts", "./etc/"},
+        {copy, "certs", "./etc/"},
+
+        %% Copy additional data files
+        {copy, "rel/data/", "./"},
+        {copy, "certs", "./data/"},
+        {copy, "cacerts", "./data/"},
+        {copy, "ozpca", "./data/"},
+        {copy, "LICENSE.txt", "./data/"},
+        {copy, "README.md", "./data/"},
+
+        %% Copy location service files
+        {copy, "location-service", "./lib/"}
+    ]},
+
+    {extended_start_script, true}
+]}.
+
+%% Profiles configuration
+{profiles, [
+    {package, [
+        {relx, [{dev_mode, false}]}
+    ]},
+    {bamboo, [
+        {relx, [{dev_mode, false}]},
+        {post_hooks, [
+            {release, "rm -rf _build/default/rel"},
+            {release, "mv -f _build/bamboo/rel _build/default"},
+            {release, "rm -rf _build/default/lib/oz_worker"},
+            {release, "mv -f _build/bamboo/lib/oz_worker _build/default/lib"}
+        ]}
+    ]}
+]}.
+
