VFS-2469 Update cluster_worker and cluster_manager, add loading of gen_server2 to relx.

--- a/rebar.config
+++ b/rebar.config
@@ -22,8 +22,8 @@
 
 {deps, [
     {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "68e84eab353"}}},
-    {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "b83ecd1"}}},
-    {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "da71898"}}}},
+    {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "0725c8d24f5"}}},
+    {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "c20df2737a0"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "191d837"}}},
     {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
     {parse_trans, {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
@@ -72,6 +72,7 @@
             ctool,
             mnesia,
             couchbeam,
+            {gen_server2, load},
             {cluster_worker, load},
             {observer_cli, load},
             %% deps included by default by reltool but not included by relx
