--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -210,6 +210,6 @@
 
         %% OAI-PMH config
         %% Prefix to the OAI-PMH API - all paths must begin with it
-        {oai_pmh_prefix, "/oai_pmh"}
+        {oai_pmh_api_prefix, "/oai_pmh"}
     ]}
 ].
