Remove unnecessary scripts from release.

--- a/rebar.config
+++ b/rebar.config
@@ -53,6 +53,13 @@
     {eunit, "epmd -daemon"}
 ]}.
 
+{post_hooks, [
+    {release, "rm -f _build/*/rel/oz_worker/bin/install_upgrade.escript"},
+    {release, "rm -f _build/*/rel/oz_worker/bin/nodetool"},
+    {release, "rm -f _build/*/rel/oz_worker/bin/oz_worker-*"},
+    {release, "rm -f _build/*/rel/oz_worker/bin/start_clean.boot"}
+]}.
+
 %% relx configuration
 {relx, [
     {release, {"oz_worker", "1.0.0"},
