VFS-2548 Add mechanism for automatic groups in OZ

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -182,7 +182,27 @@
                 id => <<"admins">>,
                 name => <<"admins">>,
                 oz_api_privileges => {oz_api_privileges, all_privileges}
+            },
+            #{
+                id => <<"all_users">>,
+                name => <<"All users">>,
+                oz_api_privileges => []
             }
+        ]},
+
+        %% Decides if global groups should be enabled. If so, every user that
+        %% is created will automatically be added to group defined in
+        %% the global_groups env variable.
+        {enable_global_groups, true},
+
+        %% A list of global groups - every new user is added to them if the
+        %% enable_global_groups variable is true. Must contain a list of tuples:
+        %%     the first element is the id of a group (must be pre-created using
+        %%         the predefined_groups variable)
+        %%     the second element is the list of group privileges that will be
+        %%         granted by default to users that are added to the group.
+        {global_groups, [
+            {<<"all_users">>, []}
         ]},
 
         %% Mapping onepanel_role => [group_id]. When a user is
