VFS-2548 Do not remove predefined groups during cleanup in ct tests

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -180,7 +180,7 @@
         {predefined_groups, [
             #{
                 id => <<"admins">>,
-                name => <<"admins">>,
+                name => <<"Admins">>,
                 oz_api_privileges => {oz_api_privileges, all_privileges}
             },
             #{
