VFS-2548 Disable global groups by default

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -193,7 +193,7 @@
         %% Decides if global groups should be enabled. If so, every user that
         %% is created will automatically be added to group defined in
         %% the global_groups env variable.
-        {enable_global_groups, true},
+        {enable_global_groups, false},
 
         %% A list of global groups - every new user is added to them if the
         %% enable_global_groups variable is true. Must contain a list of tuples:
