--- a/rebar.config
+++ b/rebar.config
@@ -140,7 +140,10 @@
         {copy, "README.md", "./data/"},
 
         %% Copy location service files
-        {copy, "location-service", "./lib/"}
+        {copy, "location-service", "./lib/"},
+
+        %% Copy GUI
+        {copy, "_build/default/lib/gui_static", "./data/gui_static"}
     ]},
 
     {extended_start_script, true}
