VFS-2397 - first oai_pmh tests

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -69,6 +69,7 @@
 
         % Name of OZ instance
         {oz_name, "unnamed"},
+        {admin_emails, ["info@onedata.org"]},
 
         %% List of beam directories to be covered, cover is not started if list is empty
         {covered_dirs, []},
