VFS-2607 Introduce env variable deciding about automatic first space creation

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -165,6 +165,10 @@
         {identity_key_file, "{{platform_data_dir}}/ozpca/identity_key.pem"},
         {identity_cert_file, "{{platform_data_dir}}/ozpca/identity_cert.pem"},
 
+        %% Decides if every user should get a new space when an account for
+        %% him is created.
+        {enable_automatic_first_space, false},
+
         %% Group graph config
         {group_graph_refresh_interval, 500},
 
