VFS-2550 Template runner_wait_process

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -6,6 +6,7 @@
 {package_install_name, "oz_worker"}.
 {package_install_user, "oz_worker"}.
 {package_runner_user, "root"}.
+{package_runner_wait_process, "oz_worker_sup"}.
 {package_install_group, "onedata"}.
 {package_install_user_desc, "oz_worker user"}.
 {package_shortdesc, "oz_worker worker node"}.
