VFS-2662 Fix a faling test in user logic test SUITe

--- a/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
+++ b/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
@@ -49,7 +49,7 @@ rest_mocks() ->
                         {#rest_response{code = 200, body = ResponseBody,
                             content_type = <<"application/json">>}, State};
                     % Change password endpoint, working for user 3
-                    {<<"PUT">>, <<"user3">>, <<"password3">>} ->
+                    {<<"PATCH">>, <<"user3">>, <<"password3">>} ->
                         case req:body(Req) of
                             % Make sure body contains a json with new password
                             <<"{\"password\":", _/binary>> ->
