VFS-2720 Refactor OZ API privileges code

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -177,21 +177,21 @@
         %% after the application has started. If the groups exist, no action
         %% is performed.
         %% Each group is represented by a map with keys
-        %% id, name, oz_api_privileges.
+        %% id, name, oz_privileges.
         %% Allows to specify the ID, name and OZ API privileges of every group.
-        %% oz_api_privileges can be either an explicit list of privileges or a
+        %% oz_privileges can be either an explicit list of privileges or a
         %% tuple of atoms indicating module and function to call which must
         %% return the list of privileges.
         {predefined_groups, [
             #{
                 id => <<"admins">>,
                 name => <<"Admins">>,
-                oz_api_privileges => {oz_api_privileges, all_privileges}
+                oz_privileges => {privileges, oz_privileges}
             },
             #{
                 id => <<"all_users">>,
                 name => <<"All users">>,
-                oz_api_privileges => []
+                oz_privileges => []
             }
         ]},
 
