VFS-2733 Standarize app listeners

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -81,6 +81,12 @@
         {oz_key_file, "{{platform_data_dir}}/ozpca/oz_key.pem"},
         {oz_cert_file, "{{platform_data_dir}}/ozpca/oz_cert.pem"},
 
+        %% server certificates
+        %% todo generate dedicated certs (this are example ones)
+        {web_key_file, "{{platform_etc_dir}}/certs/web_key.pem"},
+        {web_cert_file, "{{platform_etc_dir}}/certs/web_cert.pem"},
+        {cacerts_dir, "{{platform_etc_dir}}/cacerts"},
+
         %% REST config
         {rest_port, 8443},
         {rest_https_acceptors, 50},
@@ -99,10 +105,6 @@
         {gui_socket_timeout, 60000},
         {gui_max_keepalive, 30},
         {gui_cookie_ttl_seconds, 3600}, % one hour
-        %% certs todo generate dedicated certs (this are example ones)
-        {gui_key_file, "{{platform_etc_dir}}/certs/gui_key.pem"},
-        {gui_cert_file, "{{platform_etc_dir}}/certs/gui_cert.pem"},
-        {gui_cacert_file, "{{platform_etc_dir}}/cacerts/gui_cacert.pem"},
         {auth_config_file, "{{platform_data_dir}}/auth.config"},
         %% List of HTTP headers that will be send with every response.
         {gui_response_headers, [
