--- a/rebar.config
+++ b/rebar.config
@@ -21,8 +21,8 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "05c4ec6"}}},
-    {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "6391315"}}},
+    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "e151d0e1ae"}}},
+    {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "3ffbcc72ed3"}}},
     {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "21b61591b52"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "e4a09c3"}}},
     {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
@@ -128,13 +128,11 @@
         {mkdir, "etc"},
         {template, "rel/files/app.config", "etc/app.config"},
         {template, "rel/files/vm.args", "etc/vm.args"},
-        {copy, "cacerts", "./etc/"},
         {copy, "certs", "./etc/"},
+        {mkdir, "./etc/cacerts"},
 
         %% Copy additional data files
         {copy, "rel/data/", "./"},
-        {copy, "certs", "./data/"},
-        {copy, "cacerts", "./data/"},
         {copy, "ozpca", "./data/"},
         {copy, "LICENSE.txt", "./data/"},
         {copy, "README.md", "./data/"},
