VFS-2719 Add new logic modules for shares, handles and handle_services

--- a/rebar.config
+++ b/rebar.config
@@ -141,7 +141,7 @@
         {copy, "location-service", "./lib/"},
 
         %% Copy GUI
-        {copy, "_build/default/lib/gui_static", "./data/gui_static"}
+        {copy, "_build/default/lib/gui_static", "./data/"}
     ]},
 
     {extended_start_script, true}
