VFS-2719 Update cluster worker ref, add ct tests for provider logic

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -172,6 +172,10 @@
         %% him is created.
         {enable_automatic_first_space, false},
 
+        %% Minimum size of support that a provider must offer (smaller values
+        %% will be declined).
+        {minimum_space_support_size, 10485760}, % 10 MB
+
         %% Group graph config
         {group_graph_refresh_interval, 500},
 
