VFS-2719 Fix some bugs

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -175,7 +175,8 @@
 
         %% Minimum size of support that a provider must offer (smaller values
         %% will be declined).
-        {minimum_space_support_size, 10485760}, % 10 MB
+%%        {minimum_space_support_size, 10485760}, % 10 MB
+        {minimum_space_support_size, 1}, % TODO
 
         %% Group graph config
         {group_graph_refresh_interval, 500},
