VFS-2719 Fix dialyzer errors and some CT tests

--- a/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
+++ b/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
@@ -29,6 +29,7 @@ rest_mocks() ->
                 [User, Passwd] =
                     binary:split(base64:decode(UserAndPassword), <<":">>),
                 {Method, _} = cowboy_req:method(Req),
+                ?dump({Method, User, Passwd}),
                 case {Method, User, Passwd} of
                     % user with id user1Id, credentials user1:password1
                     % and role 'user1Role'
