VFS-2719 Update cluster worker reference

--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,7 @@
     "test_distributed/logs/*"
 ]}.
 
-{cover_enabled, true}.
+{cover_enabled, true}.r
 
 {dialyzer, [
     {warnings, [error_handling, race_conditions]},
@@ -22,7 +22,7 @@
 
 {deps, [
     {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "6adc907"}}},
-    {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "049721f"}}},
+    {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "7cae565"}}},
     {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "5d54032e886"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "8380819"}}},
     {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
