VFS-2719 Remove debug code

--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,7 @@
     "test_distributed/logs/*"
 ]}.
 
-{cover_enabled, true}.r
+{cover_enabled, true}.
 
 {dialyzer, [
     {warnings, [error_handling, race_conditions]},
