--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -175,8 +175,9 @@
 
         %% Minimum size of support that a provider must offer (smaller values
         %% will be declined).
+        % TODO VFS-3071
 %%        {minimum_space_support_size, 10485760}, % 10 MB
-        {minimum_space_support_size, 1}, % TODO
+        {minimum_space_support_size, 1},
 
         %% Group graph config
         {group_graph_refresh_interval, 500},
