--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -175,12 +175,7 @@
 
         %% Minimum size of support that a provider must offer (smaller values
         %% will be declined).
-        % TODO VFS-3071
-%%        {minimum_space_support_size, 10485760}, % 10 MB
-        {minimum_space_support_size, 1},
-
-        %% Group graph config
-        {group_graph_refresh_interval, 500},
+        {minimum_space_support_size, 1000000}, % 1 MB
 
         %% Predefined groups config - groups that are created automatically
         %% after the application has started. If the groups exist, no action
