--- a/rebar.config
+++ b/rebar.config
@@ -21,13 +21,12 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "1e558a49"}}},
-    {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "159037486de"}}},
+    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "995a7f"}}},
+    {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "d1211ef6"}}},
     {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "5d54032e886"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "03c27aef14f"}}},
     {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
     {parse_trans, {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
-    {annotations, {git, "https://github.com/RoXeon/annotations.git", "HEAD"}},
     {observer_cli, "1.0.7"}
 ]}.
 
