VFS-3118 Change default env value for custom gui root

--- a/rebar.config
+++ b/rebar.config
@@ -139,7 +139,7 @@
         %% Copy location service files
         {copy, "location-service", "./lib/"},
 
-        %% Copy GUI
+        %% Copy GUI static files
         {copy, "_build/default/lib/gui_static", "./data/"}
     ]},
 
