--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -113,13 +113,13 @@
 %%            {<<"Strict-Transport-Security">>, <<"max-age=31536000; includeSubDomains">>}
         ]},
 
-        %% Directory where onezone tries to find static files of a custom GUI.
-        %% If the directory is not empty, it will serve the static files
-        %% from it. If not, it will fall back to default, embedded GUI.
-        {gui_custom_static_root, "/var/www/html"},
         %% Directory where static files of default, embedded GUI are kept.
         %% Used when gui_custom_static_root is non-existent or empty.
         {gui_default_static_root, "{{platform_data_dir}}/gui_static"},
+        %% Directory where onezone tries to find static files of a custom GUI.
+        %% If the directory is not empty, it will serve the static files
+        %% from it. If not, it will fall back to default, embedded GUI.
+        {gui_custom_static_root, "/var/www/html/oz_worker"},
 
         %% Decides if docs proxy shall be used. Related envs are used only
         %% when true.
