VFS-3153 Update ctool.

--- a/rebar.config
+++ b/rebar.config
@@ -21,7 +21,7 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "995a7f"}}},
+    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "7c73ba"}}},
     {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "d1211ef6"}}},
     {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "5d54032e886"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "03c27aef14f"}}},
