VFS-3146 Update cluster_manager and ctool

--- a/rebar.config
+++ b/rebar.config
@@ -21,9 +21,9 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "7c73ba"}}},
+    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "699e808d6f3"}}},
     {cluster_worker,{git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref, "b143eaae0a7"}}},
-    {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "5d54032e886"}}}},
+    {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "1ea7637bac1"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "03c27aef14f"}}},
     {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
     {parse_trans, {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
@@ -78,6 +78,7 @@
             ctool,
             mnesia,
             couchbeam,
+            {cberl, load},
             {cluster_worker, load},
             {observer_cli, load},
             {gen_server2, load},
