VFS-3213 Add libcouchbase package dependency

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -58,6 +58,7 @@
     ", gcc-c++ >= 4.9.0"
     ", git"
     ", golang"
+    ", libcouchbase-devel"
     ", libsodium-devel"
     ", libtool"
     ", ninja-build"
@@ -79,6 +80,7 @@
     ", g++ (>= 4.9.0)"
     ", git"
     ", golang-go"
+    ", libcouchbase-dev"
     ", libprotobuf-dev (>= 2.6.0)"
     ", libprotoc-dev (>= 2.6.0)"
     ", libsodium-dev"
