VFS-3342 Make sure user aliases in subscriptions are precomputed every time a space name changes, decrease changes intervals

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -50,7 +50,16 @@
         %% Time (in sec) after which dns closes idle connection
         {dns_tcp_timeout, 20},
         %% DNS config file location
-        {dns_config_file, "{{platform_data_dir}}/dns.config"}
+        {dns_config_file, "{{platform_data_dir}}/dns.config"},
+
+        %% ===================================================================
+        %% Datastore changes
+        %% ===================================================================
+
+        {couchbase_changes_batch_size, 3},
+        {couchbase_changes_update_interval, 1000},
+        {couchbase_changes_stream_batch_size, 3},
+        {couchbase_changes_stream_update_interval, 1000}
     ]},
 
     %% oz_worker config
