VFS-3224 Implement SAML login, add better error handling in login process

--- a/rebar.config
+++ b/rebar.config
@@ -24,9 +24,10 @@
     {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "b5ad841"}}},
     {cluster_worker, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref,"e34f10f"}}},
     {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "adccb731"}}}},
-    {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "449f114e"}}},
+    {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "b87f7a71c9"}}},
     {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
     {parse_trans, {git, "https://github.com/uwiger/parse_trans.git", {tag, "2.9.2"}}},
+    {esaml, {git, "https://github.com/lopiola/esaml.git", {ref, "087c2a78c1"}}},
     {observer_cli, "1.0.7"}
 ]}.
 
@@ -92,11 +93,12 @@
             {edoc, load},
             {enacl_p, load},
             {erts, load},
+            esaml,
             {et, load},
             {eunit, load},
             gen_smtp,
             hackney,
-            {inets, load},
+            inets,
             {jiffy, load},
             {jsx, load},
             {macaroons, load},
