--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -116,6 +116,7 @@
         {gui_max_keepalive, 30},
         {gui_cookie_ttl_seconds, 3600}, % one hour
         {auth_config_file, "{{platform_data_dir}}/auth.config"},
+        {saml_config_file, "{{platform_data_dir}}/saml.config"},
         %% List of HTTP headers that will be send with every response.
         {gui_response_headers, [
             {<<"X-Frame-Options">>, <<"SAMEORIGIN">>}
