VFS-3376 Add support for group mapping via OIDC and SAML

--- a/rel/data/auth.config
+++ b/rel/data/auth.config
@@ -79,6 +79,17 @@
 %%        {app_id, <<"app id">>},
 %%        {app_secret, <<"app secret">>},
 %%        % Provider specific config
-%%        {xrds_endpoint, <<"https://iam-test.indigo-datacloud.eu/.well-known/openid-configuration">>}
+%%        {xrds_endpoint, <<"https://iam-test.indigo-datacloud.eu/.well-known/openid-configuration">>},
+%%        % Authority delegation config
+%%        {authority_delegation, [
+%%            {enabled, true},
+%%            {token_prefix, <<"indigo:">>}
+%%        ]},
+%%        {group_mapping, [
+%%            {enabled, true},
+%%            {vo_group_id, <<"INDIGO-DataCloud">>},
+%%            % Optional field
+%%            {super_group, undefined}
+%%        ]}
 %%    ]}
 ].
