VFS-3376 Fix exemplary saml.config

--- a/rel/data/saml.config
+++ b/rel/data/saml.config
@@ -10,8 +10,8 @@
         key_file => "./etc/certs/saml_key.pem",
         organization_name => "Onedata",
         organization_display_name => "Onedata",
-        contact_name => "John Doe",
-        contact_email => "john.doe@onedata.org",
+        tech_contact_name => "John Doe",
+        tech_contact_email => "john.doe@onedata.org",
         sign_metadata => false,
         sign_requests => true,
         want_assertions_signed => true
