Reconfigure couchbase pools

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -59,7 +59,28 @@
         {couchbase_changes_batch_size, 3},
         {couchbase_changes_update_interval, 1000},
         {couchbase_changes_stream_batch_size, 3},
-        {couchbase_changes_stream_update_interval, 1000}
+        {couchbase_changes_stream_update_interval, 1000},
+
+        {couchbase_pool_size, [
+            {<<"sync">>, [
+                {read, 10},
+                {write, 10},
+                {changes, 3}
+            ]},
+            {'_', [
+                {read, 10},
+                {write, 10},
+                {changes, 0}
+            ]}
+        ]},
+
+        {datastore_cache_size, [
+            {memory, 200000},
+            {disc, 500000}
+        ]},
+
+        {throttling_delay_db_queue_size, 20000},
+        {throttling_db_queue_limit, 150000}
     ]},
 
     %% oz_worker config
