--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -62,15 +62,10 @@
         {couchbase_changes_stream_update_interval, 1000},
 
         {couchbase_pool_size, [
-            {<<"sync">>, [
-                {read, 10},
-                {write, 10},
+            {<<"onedata">>, [
+                {read, 50},
+                {write, 50},
                 {changes, 3}
-            ]},
-            {'_', [
-                {read, 10},
-                {write, 10},
-                {changes, 0}
             ]}
         ]},
 
