VFS-3526 Reimplement DNS server to support OZ subdomains
- Remove old dns code
- Add "erldns" application and its dependencies
- Add datastore document for storing dns information
- Add aspect hostname_config for managing provider subdomain delegation

Other changes:
- Replace provider record fields "urls" and "redirection_point" with
  "hostname".
- Rename error codes, remove redundant ones

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -23,6 +23,27 @@
         {async_threshold_window, 50}
     ]},
 
+    %% erldns config
+    {erldns,[
+        {servers, [
+            [{name, inet_all_1}, {address, "0.0.0.0"}, {port, 53}, {family, inet}, {processes, 2}]
+        ]},
+
+        {dnssec, [
+            {enabled, true}
+        ]},
+
+        {use_root_hints, false},
+        {catch_exceptions, false},
+        {zones, "{{platform_data_dir}}/empty_zones.erldns.json"},
+        {pools, [
+            {tcp_worker_pool, erldns_worker, [
+                {size, 10},
+                {max_overflow, 20}
+            ]}
+        ]}
+    ]},
+
     %% cluster_worker config
     {cluster_worker, [
 
@@ -33,24 +54,7 @@
         % names of modules implementing given plugins
         {datastore_config_plugin, datastore_config_plugin},
         {node_manager_plugin, node_manager_plugin},
-        {dns_worker_plugin, dns_worker_plugin},
         {identity_repository, located_rest_identity_repository},
-
-        %% ===================================================================
-        %% DNS
-        %% ===================================================================
-
-        %% DNS port
-        {dns_port, 53},
-        %% Maximum supported UDP size, that will be advertised by the server (via EDNS). If a client advertises a bigger
-        %% value, it will be assumed to be as high as this.
-        {edns_max_udp_size, 1280},
-        %% Number of dns tcp acceptors
-        {dns_tcp_acceptor_pool_size, 20},
-        %% Time (in sec) after which dns closes idle connection
-        {dns_tcp_timeout, 20},
-        %% DNS config file location
-        {dns_config_file, "{{platform_data_dir}}/dns.config"},
 
         %% ===================================================================
         %% Datastore changes
@@ -176,6 +180,44 @@
         %% ===================================================================
         %% Healthcheck interval for changes stream used by Graph Sync server
         {gs_server_stream_healthcheck_interval, 5000},
+
+
+        %% DNS config
+        {dns, [
+            %% Static mapings from onezone subdomain to list of ips.
+            %% Full domain will be based on http_domain as set in this config
+            %% file.
+            %% The subdomain must be a binary and must not begin or end
+            %% with the dot character.
+            %% Example:
+            %% {static_entries, [
+            %%     {<<"example-subdomain">>, [{10,0,0,1}, {10,0,0,2}]}
+            %% ]}
+            {static_entries, []},
+
+            %% maximum number of ips to be presented as subdomain
+            %% ns1, ns2, ns3 etc. in NS records
+            {ns_limit, 2},
+
+            %% SOA record parameters
+            % Nameserver admin mailbox
+            {soa_admin_mailbox, "dns-admin.onedata.org"},
+            % This value must be incremented on every update of this config file
+            {soa_serial, 2017090401},
+            % Time interval before the zone should be refreshed
+            {soa_refresh, 7200},
+            % Time interval that should elapse before a failed refresh should be retried
+            {soa_retry, 1800},
+            % Time value that specifies the upper limit on the time interval that
+            % can elapse before the zone is no longer authoritative
+            {soa_expire, 1209600},
+            % Time a NAME ERROR = NXDOMAIN result may be cached by any resolver
+            {soa_minimum, 120},
+
+            {a_ttl, 120},
+            {ns_ttl, 120},
+            {soa_ttl, 120}
+        ]},
 
         %% Location Service config
         {location_service_enabled, false},
