VFS-3594 Fix a validation error during group token creation via POST and an error during user password change

--- a/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
+++ b/test_distributed/user_logic_test_SUITE_data/onepanel_mock_description.erl.cfg
@@ -50,12 +50,17 @@ rest_mocks() ->
                             content_type = <<"application/json">>}, State};
                     % Change password endpoint, working for user 3
                     {<<"PATCH">>, <<"user3">>, <<"password3">>} ->
-                        case req:body(Req) of
-                            % Make sure body contains a json with new password
-                            <<"{\"password\":", _/binary>> ->
-                                {#rest_response{code = 204}, State};
+                        BodyMap = json_utils:decode_map(req:body(Req)),
+                        io:format("AA: ~p", [BodyMap]),
+                        OldPassword = maps:get(<<"currentPassword">>, BodyMap, undefined),
+                        NewPassword = maps:get(<<"newPassword">>, BodyMap, undefined),
+                        case {OldPassword, NewPassword} of
+                            {undefined, _} ->
+                                {#rest_response{code = 400}, State};
+                            {_, undefined} ->
+                                {#rest_response{code = 400}, State};
                             _ ->
-                                {#rest_response{code = 401}, State}
+                                {#rest_response{code = 204}, State}
                         end;
                     _ ->
                         {#rest_response{code = 401}, State}
