VFS-3609 Implement dns txt records set via logic channel

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -220,7 +220,8 @@
 
             {a_ttl, 120},
             {ns_ttl, 120},
-            {soa_ttl, 120}
+            {soa_ttl, 120},
+            {txt_ttl, 120}
         ]},
 
         %% Decides if every user should get a new space when an account for
