VFS-3579 Generate OZ CA cert on startup if not present, add endpoint for publishing public CA to providers

--- a/rebar.config
+++ b/rebar.config
@@ -21,8 +21,8 @@
 {eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "./test/eunit_results"}]}}]}.
 
 {deps, [
-    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "40696c82de"}}},
-    {cluster_worker, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref,"54994aa383"}}},
+    {ctool, {git, "ssh://git@git.plgrid.pl:7999/vfs/ctool.git", {ref, "b4db10905b"}}},
+    {cluster_worker, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-worker.git", {ref,"82610e9cf0"}}},
     {cluster_manager, {raw, {git, "ssh://git@git.plgrid.pl:7999/vfs/cluster-manager.git", {ref, "adccb731"}}}},
     {gui, {git, "ssh://git@git.plgrid.pl:7999/vfs/gui.git", {ref, "b87f7a71c9"}}},
     {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.4"}}},
@@ -127,7 +127,7 @@
         {template, "rel/files/app.config", "etc/app.config"},
         {template, "rel/files/vm.args", "etc/vm.args"},
         {copy, "certs", "./etc/"},
-        {mkdir, "./etc/cacerts"},
+        {copy, "cacerts", "./etc/"},
 
         %% Copy additional data files
         {copy, "rel/data/", "./"},
