--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -97,11 +97,24 @@
         %% zone CA config
         {ozpca_dir, "{{platform_data_dir}}/ozpca"},
 
-        %% server certificates
-        %% todo generate dedicated certs (this are example ones)
+
+        %% ===================================================================
+        %% Server certificates
+        %% ===================================================================
+
+        %% If enabled and there is no web key/cert under expected paths
+        %% (web_key_file, web_cert_file) during startup, a new web cert will be
+        %% generated with CN matching onezone domain and signed by CA cert
+        %% found under test_web_cert_ca_path.
+        %% This functionality is devised for test purposes and should not be
+        %% used in production.
+        {generate_web_cert_if_absent, true},
+        %% The CA cert to sign auto generated test web certs. The file must
+        %% contain both the key and cert.
+        {test_web_cert_ca_path, "{{platform_etc_dir}}/cacerts/OneDataTestWebServerCa.pem"},
+        {cacerts_dir, "{{platform_etc_dir}}/cacerts"},
         {web_key_file, "{{platform_etc_dir}}/certs/web_key.pem"},
         {web_cert_file, "{{platform_etc_dir}}/certs/web_cert.pem"},
-        {cacerts_dir, "{{platform_etc_dir}}/cacerts"},
 
         %% REST config
         {rest_port, 8443},
@@ -161,17 +174,6 @@
         %% ===================================================================
         %% Healthcheck interval for changes stream used by Graph Sync server
         {gs_server_stream_healthcheck_interval, 5000},
-
-
-        %% Subscriptions config
-        {history_changes_stream_life_limit_seconds, 10},
-        {changes_stream_presence_check_interval_seconds, 30},
-        {wait_for_latest_changes_in_cache, 1500},
-        {subscriptions_sent_revisions_limit, 40},
-        {subscription_cache_size, 1000},
-        {subscription_batch_ttl, 2000},
-        {subscriptions_wss_port, 7443},
-        {subscroptions_https_acceptors, 50},
 
         %% Location Service config
         {location_service_enabled, false},
