VFS-3783 Move state tokens from single-node ETS to datastore

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -136,6 +136,8 @@
         {gui_cookie_ttl_seconds, 3600}, % one hour
         {auth_config_file, "{{platform_data_dir}}/auth.config"},
         {saml_config_file, "{{platform_data_dir}}/saml.config"},
+        % After this time, login procedure via OIDC/SAML expires (if not completed)
+        {state_token_ttl_secs, 300},
         %% List of HTTP headers that will be send with every response.
         {gui_response_headers, [
             {<<"X-Frame-Options">>, <<"SAMEORIGIN">>}
