VFS-3815 Added erlang-observer as RPM build dependency

--- a/pkg.vars.config
+++ b/pkg.vars.config
@@ -51,6 +51,7 @@
     ", erlang-edoc >= 18.0"
     ", erlang-erl_interface >= 18.0"
     ", erlang-eunit >= 18.0"
+    ", erlang-observer >= 18.0"
     ", erlang-parsetools >= 18.0"
     ", erlang-reltool >= 18.0"
     ", erlang-xmerl >= 18.0"
