VFS-3614 Allow more nsX subdomains than nodes
Add config variable to force creation of fake ns1, ns2..
subdomains with multiple numbers resolving to the same IPs.
This is necessary to register 1-node OZ in some DNS providers.

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -184,20 +184,27 @@
 
         %% DNS config
         {dns, [
-            %% Static mapings from onezone subdomain to list of ips.
-            %% Full domain will be based on http_domain as set in this config
-            %% file.
-            %% The subdomain must be a binary and must not begin or end
-            %% with the dot character.
-            %% Example:
-            %% {static_entries, [
-            %%     {<<"example-subdomain">>, [{10,0,0,1}, {10,0,0,2}]}
-            %% ]}
+            % Static mapings from onezone subdomain to list of ips.
+            % Full domain will be based on http_domain as set in this config
+            % file.
+            % The subdomain must be a binary and must not begin or end
+            % with the dot character.
+            % Example:
+            % {static_entries, [
+            %     {<<"example-subdomain">>, [{10,0,0,1}, {10,0,0,2}]}
+            % ]}
             {static_entries, []},
 
-            %% maximum number of ips to be presented as subdomain
-            %% ns1, ns2, ns3 etc. in NS records
+            % maximum number of ips to be presented as subdomain
+            % ns1, ns2, ns3 etc. in NS records
             {ns_limit, 2},
+
+            % minimum number of resolved nsX domains. If the number specified
+            % is higher than number of oz_worker nodes, some domains will resolve
+            % to the same IP address. Must not be higher than ns_limit
+            % Use this option if your domain registart enforces
+            % a minimum number of Nameserver addresses.
+            {ns_minimum, 2},
 
             %% SOA record parameters
             % Nameserver admin mailbox
