VFS-3614 Change naming in dns_state and split domain tests
Use a map to return subdomain to IPs mapping from dns_state.

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -197,14 +197,14 @@
 
             % maximum number of ips to be presented as subdomain
             % ns1, ns2, ns3 etc. in NS records
-            {ns_limit, 2},
+            {ns_max_entries, 10},
 
             % minimum number of resolved nsX domains. If the number specified
             % is higher than number of oz_worker nodes, some domains will resolve
-            % to the same IP address. Must not be higher than ns_limit
+            % to the same IP address. Must not be higher than ns_max_entries
             % Use this option if your domain registart enforces
             % a minimum number of Nameserver addresses.
-            {ns_minimum, 2},
+            {ns_min_entries, 2},
 
             %% SOA record parameters
             % Nameserver admin mailbox
