VFS-3751 Authorize providers using macaroons rather than certificates   * Remove OZ CA

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -81,7 +81,7 @@
         {dev_mode, false},
 
         % Ports used by application
-        {application_ports, [53, 80, 443, 7443, 7770, 7771, 8443]},
+        {application_ports, [53, 80, 443, 7443, 7770, 7771]},
 
         %% Also used as the certificate domain and to provider CRLs.
         {http_domain, "127.0.0.1"},
@@ -97,9 +97,6 @@
         {covered_dirs, []},
         %% List of modules to be excluded during cover analysis
         {covered_excluded_modules, []},
-
-        %% zone CA config
-        {ozpca_dir, "{{platform_data_dir}}/ozpca"},
 
 
         %% ===================================================================
@@ -131,6 +128,9 @@
         % @todo for now make the authentication macaroons live longer,
         % until automatic refreshing by provider is implemented: VFS-1766
         {authentication_macaroon_expiration_seconds, 36000}, % 10 hours
+        %% Macaroons with longer TTL will not be accepted to impose higher
+        %% security level.
+        {max_provider_macaroon_ttl, 3600}, % 1 hour
 
         %% GUI config
         {gui_port, 443},
@@ -242,8 +242,8 @@
 
         %% Identity verification config
         {public_key_refresh_interval_seconds, 600},
-        {identity_key_file, "{{platform_data_dir}}/ozpca/identity_key.pem"},
-        {identity_cert_file, "{{platform_data_dir}}/ozpca/identity_cert.pem"},
+        {identity_key_file, "{{platform_data_dir}}/identity_key.pem"},
+        {identity_cert_file, "{{platform_data_dir}}/identity_cert.pem"},
 
         %% Decides if every user should get a new space when an account for
         %% him is created.
