VFS-3535 solve pr tasks

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -121,6 +121,7 @@
         {rest_port, 8443},
         {rest_https_acceptors, 50},
         %% Prefix to the REST API - all paths must begin with it.
+        %% Must begin with slash
         {rest_api_prefix, "/api/v3/onezone"},
         %% Macaroons authorization
         {authorization_macaroon_expiration_seconds, 31536000}, % 1 year
