--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -76,6 +76,11 @@
         % with functionalities used in tests.
         {dev_mode, false},
 
+        % Build version in form:
+        % <number of commits since last tag>-g<last commit hash abbrev>
+        % e.g. 19-g0d0fd5b
+        {build_version, "{{{build_version}}}"},
+
         % Ports used by application
         {application_ports, [53, 80, 443, 7443, 7770, 7771, 8443]},
 
